--- a/css/screen.scss
+++ b/css/screen.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-$pattern: "{{ site.baseurl }}/images/pattern.png";
+$pattern: "https://www.unsw.edu.au/sites/default/files/UNSW_0.png";
 $screenshot-buttons: "{{ site.baseurl }}/images/screenshot-buttons.svg";
 
 $brand-color: #FFA715;
