--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="generator" content="Jekyll v{{ jekyll.version }}">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
 
 	<link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
