--- a/css/screen.scss
+++ b/css/screen.scss
@@ -2,6 +2,7 @@
 ---
 
 $pattern: "{{ site.baseurl }}/images/pattern.png";
+$screenshot-buttons: "{{ site.baseurl }}/images/screenshot-buttons.svg";
 
 $brand-color: #FFA715;
 $html-background-color: #222;
