--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
 
 					<ul class="footer-links">
 						<li>
-							<h2>{{ site.data.company.title }}</h2>
+							<h2>InsData</h2>
 						</li>
 						<li>{{ site.data.company.description }}</li>
 						
